[project]
name = "nbaplayoffstats"
version = "0.1.0"
description = ""
authors = [
    {name = "ryan",email = "friendshipchurchappdevelopment@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "basketball-reference-scraper (>=2.0.0,<3.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.9.0,<3.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
